Implement updated swagger implementation
