# src/main/resources/swagger.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: 0.5.0
+  version: 0.6.0
   title: JMusicBot
   license:
     name: MIT
@@ -284,11 +284,15 @@ paths:
           type: string
           format: password
           required: true
-        - name: queueEntry
-          in: body
-          schema:
-            $ref: '#/definitions/QueueEntry'
-          description: the queue entry to dequeue
+        - name: songId
+          in: query
+          type: string
+          description: the song ID of the song to dequeue
+          required: true
+        - name: providerId
+          in: query
+          type: string
+          description: the provider ID of the song to dequeue
           required: true
       responses:
         '200':
